--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -39,6 +39,10 @@ h1 {
   margin: 2rem auto;    
 }
 
+em {
+  font-style: italic;
+}
+
 .game-selection, .instructions {
   box-sizing: border-box;
   width: 46rem;
